# music-finder

./: .env.example  .gitignore  CLAUDE.md  bandcamp_client.py  config.py  db.py  discovery.py  feedback.py  genre_cluster.py  lastfm_client.py  musicbrainz_client.py  notification.py  playlist_builder.py  pyproject.toml  rss_client.py  run_discovery.py  run_pipeline.py  run_taste_profile.py  scanner.py  scheduler.py  scorer.py  spotify_client.py  taste_profiler.py
scripts/: get_refresh_token.py  run_discovery.py  run_pipeline.py  run_taste_profile.py
src/music_finder/: __init__.py  bandcamp_client.py  config.py  db.py  discovery.py  feedback.py  genre_cluster.py  lastfm_client.py  notification.py  playlist_builder.py  rss_client.py  scanner.py  scheduler.py  scorer.py  spotify_client.py  taste_profiler.py
